# ComputerScienceFromScratch

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
Brainfuck/: __main__.py  brainfuck.py  tests.py
Brainfuck/Examples/: SOURCES
Chip8/: __main__.py  vm.py
Impressionist/: __main__.py  impressionist.py  svg.py
KNN/: __main__.py  digit.py  fish.py  knn.py
KNN/datasets/digits/: readme.txt
KNN/datasets/fish/: license.txt
NESEmulator/: __main__.py  cpu.py  ppu.py  rom.py  tests.py  ui.py
NESEmulator/Games/DABGSource/: 2menu.pb53  Morning Wood2.ftm  ascii1.chr  ascii2.chr  common.s  dabg.s  edit.s  explosion.s  levels.s  levelsel.nam  main.s  memory.s  meta.s  mk.bat.txt  music.ftm  newgame.s  nrom256.x  ns_nes.s  object.s  player.s  powerups.s  screens.s  scrollmode.s
NanoBASIC/: __main__.py  errors.py  executioner.py  grammar.txt  interpreter.py  nodes.py  parser.py  tests.py  tokenizer.py
RetroDither/: __main__.py  dither.py  macpaint.py
StainedGlass/: __main__.py  stainedglass.py  svg.py
tests/: test_brainfuck.py  test_knn.py  test_nanobasic.py  test_nesemulator.py  test_retrodither.py
