[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FunComputerScienceProjectsInPython"
authors = [{name = "David Kopec", email = "david@oaksnow.com"}]
version = "1.0.0"
description = "Source code from the book Fun Computer Science Projects in Python"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["book", "computer science", "emulator", "interpreter", "compuer art", "macpaint", "knn", "basic", "brainfuck", "nes", "chip8"]
dependencies = [
    "Pillow >=10.3.0",
    "NumPy >=1.26.4",
    "Pygame >=2.5.2",
]

[project.urls]
Home = "https://github.com/davecom/FunComputerScienceProjectsInPython"

[tool.flit.module]
name = "funcomputerscienceprojectsinpython"